[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/StatUpgradeButton.gd" type="Script" id=1]
[ext_resource path="res://PixelTextTheme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
script = ExtResource( 1 )

[node name="StatName" type="Label" parent="."]
anchor_bottom = 1.0
margin_right = 81.0
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.541176 )
custom_constants/shadow_offset_y = 3
text = "Health"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatValue" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -70.0
grow_horizontal = 0
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.541176 )
custom_constants/shadow_offset_y = 3
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
rect_min_size = Vector2( 50, 50 )
text = "+"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_upgrade_pressed"]
